--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc",
     "test": "jest --config jest.config.js",
+    "test:coverage": "jest --coverage",
     "start": "node dist/main.js"
   }
 }
